<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backsietk"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/codz"
    android:layout_gravity="center"
    android:visibility="visible"
    tools:context=".year">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/oneboy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/oneboy" />

            <ImageView
                android:id="@+id/twoboy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/twoboy" />

            <ImageView
                android:id="@+id/threeboy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/threeboy" />

            <ImageView
                android:id="@+id/fourboy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/fourboy" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/oneyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#C4070707"
                android:text="@string/i_year"
                android:textColor="#FCF8F8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/twoyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="#C4070707"
                android:text="@string/ii_year"
                android:textColor="#FCF8F8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/threeyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="#C4070707"
                android:text="@string/iii_year"
                android:textColor="#FCF8F8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fouryear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="#C4070707"
                android:text="@string/iv_year"
                android:textColor="#FCF8F8"
                android:textSize="20sp"
                android:textStyle="bold" />




        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C4070707"
        android:layout_marginTop="40dp"
        android:text="Notice _ Board"
        android:textAlignment="center"
        android:textColor="#FCF8F8"
        android:textSize="20sp"
        android:textStyle="bold" />



</LinearLayout>
